[package]
name = "daemon"
version = "0.1.0"
authors = ["berkeleybross@gmail.com <berkeleybross@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.x11]
version = "2.18.2"
features = ["xlib","xinput"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
